# QuantitativeDiffusion

./: CMakeLists.txt  README.md
EMClustering/: AffineRegistration.cxx  AffineRegistration.h  CMakeLists.txt  Common.h  EMCMedialSheet.cxx  EMCMedialSheet.xml  EMClustering.cxx  EMClustering.xml  EMClusteringIO.cxx  EMClusteringIO.h  EMCore.cxx  EMCore.h  MeshOperations.cxx  MeshOperations.h  Quantification.cxx  Quantification.h  Registration.cxx  Registration.h  itkPolylineCell.h  itkPolylineCell.txx  myMaths.cxx  myMaths.h
EMClustering/Atlas/: atlasCenters.vtp  atlasFAMap.nhdr
EMClustering/Atlas/sri24/: atlasCenters.vtk  atlasCenters.vtp  atlasFAMap.nhdr  cingulum_left.vtp  cingulum_right.vtp  genu.vtp  splenium.vtp  splenium_upper.vtp
EMClustering/Data/: initCenters_test1.vtp  initCenters_test2.vtp  trajectories_test2.vtp
ProcessingScripts/: main.m  makePlotsFromCVSfiles.m  processCSVfiles.m
